--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "38749db8",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
     "\n",
     "        #------------------- Algoritmo EM\n",
     "\n",
-    "        #Se inicializa la verosimilitud previa como 0\n",
+    "        #Se inicializa la log-verosimilitud previa como 0\n",
     "        log_likelihood_old = 0\n",
     "\n",
     "        \n",
@@ -630,6 +630,179 @@
     "Paso M:\n",
     "\n",
     "Tras la estimación de la probabilidad de que la muestra $x_i$ pertenezca al cluster k, dados los parámetros actuales. Se actualizan los pesos, la media y la covarianza, basándose en dicha probabilidad, con el fin de hallar los parámetros que mejor se ajustan a las mismas. Una vez calculados, se calcula la log-verosimilitud para analizar la convergencia del modelo y el ciclo vuelve a comenzar, nuevamente recalculando la probabilidad condicional, con los nuevos parámetros y actualizandolos. Dicho bucle termina cuando la log-verosimilitud no varía en un rango de tolerancia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e2085f",
+   "metadata": {},
+   "source": [
+    "#### Correcciones\n",
+    "\n",
+    "Para el caso de 1 gaussiana, la verosimilitud es:\n",
+    "\n",
+    "$$\n",
+    "L(\\mu, \\sigma^2) \n",
+    "= \\prod_{i=1}^{N} \n",
+    "\\frac{1}{\\sqrt{2\\pi\\sigma^2}} \n",
+    "\\exp\\!\\left(-\\frac{(x_i - \\mu)^2}{2\\sigma^2}\\right)\n",
+    "$$\n",
+    "\n",
+    "Este caso es complejo de derivar de forma directa, ya que es una productoria de N términos. Al derivar es necesario aplicar la regla del producto, complejizando mucho la cuenta. Por ello se recurre a aplicar el logaritmo a la verosimilitud, que permite descomponer la productoria en una sumatoria. Sin embargo, el problema si tiene soluciones cerradas, aunque al ser probabilidades, ocurre que la productoria se realiza entre valores muy pequeños (entre 0 y 1), que pueden llevar por redondeo a 0 en una computadora.\n",
+    "Por otro lado, aplicar el logaritmo permite optimizar facilmente, ya que esta es una función monótona creciente. Crecerá de forma indefinida pero en un determinado valor, comenzará a estancarse, variando poco, algo que se aprovechará en el algoritmo EM.\n",
+    "\n",
+    "Luego, la log-verosimilitud para este caso es:\n",
+    "\n",
+    "$$\n",
+    "\\ell(\\mu, \\sigma^2)\n",
+    "= -\\frac{N}{2}\\log(2\\pi\\sigma^2)\n",
+    "-\\frac{1}{2\\sigma^2}\\sum_{i=1}^{N}(x_i - \\mu)^2\n",
+    "$$\n",
+    "\n",
+    "Lo cual permite derivar fácilmente y obtener los estimadores de máxima verosimilitud:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\ell}{\\partial \\mu}\n",
+    "= \\frac{1}{\\sigma^2} \\sum_{i=1}^{N} (x_i - \\mu)\n",
+    "\\quad \\Rightarrow \\quad\n",
+    "\\hat{\\mu} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\ell}{\\partial \\sigma^2}\n",
+    "= -\\frac{N}{2\\sigma^2}\n",
+    "+ \\frac{1}{2(\\sigma^2)^2}\\sum_{i=1}^{N}(x_i - \\mu)^2\n",
+    "\\quad \\Rightarrow \\quad\n",
+    "\\hat{\\sigma}^2 = \\frac{1}{N}\\sum_{i=1}^{N}(x_i - \\hat{\\mu})^2\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Para el caso de $k$ gaussianas, la verosimilitud vale:\n",
+    "\n",
+    "$$\n",
+    "L(\\theta)\n",
+    "= \\prod_{i=1}^{N}\n",
+    "\\left[\n",
+    "\\sum_{k=1}^{K}\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\right]\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Lo cual sigue siendo complejo de derivar de forma directa, llevando entonces a aplicar el logaritmo para descomponer la productoria en una suma y por las razones previas:\n",
+    "\n",
+    "$$\n",
+    "\\ell(\\theta)\n",
+    "= \\log L(\\theta)\n",
+    "= \\sum_{i=1}^{N}\n",
+    "\\log\n",
+    "\\left[\n",
+    "\\sum_{k=1}^{K}\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\right]\n",
+    "$$\n",
+    "\n",
+    "Sin embargo, en este caso la derivación también se vuelve compleja, dado que se tiene el logaritmo de una sumatoria, que termina acoplando los parámetros, producto de una solución no lineal, es decir, no hay solución analítica. Es aquí cuando el algoritmo EM y sus iteraciones toma protagonismo: \n",
+    "\n",
+    "El algoritmo EM se basa en introducir $k$ variables latentes, que indican a qué gaussiana (de las $k$ gaussianas) pertenece cada muestra:\n",
+    "\n",
+    "$$\n",
+    "z_i \\in \\{1, 2, \\dots, K\\}, \\qquad P(z_i = k) = \\pi_k\n",
+    "$$\n",
+    "\n",
+    "con estas variables, la verosimilitud marginal resultante, es:\n",
+    "$$\n",
+    "p(x_i \\mid \\theta)\n",
+    "= \\sum_{z_i=1}^{K} p(x_i, z_i \\mid \\theta)\n",
+    "$$\n",
+    "\n",
+    "donde las probabilidades están dadas por:\n",
+    "\n",
+    "$$\n",
+    "p(x_i, z_i \\mid \\theta)\n",
+    "= \\pi_{z_i} \\, \\mathcal{N}(x_i \\mid \\mu_{z_i}, \\Sigma_{z_i})\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Al aplicar el logaritmo considerando estas variables latentes, la expresión de la log-verosimilitud completa se reduce a una sumatoria doble:\n",
+    "\n",
+    "$$\n",
+    "\\log p(X, Z \\mid \\theta)\n",
+    "= \\sum_{i=1}^{N} \\sum_{k=1}^{K} \\mathbf{1}_{\\{z_i = k\\}}\n",
+    "\\left[\n",
+    "\\log \\pi_k + \\log \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\right]\n",
+    "$$\n",
+    "\n",
+    "Considerando esto, el algoritmo en el paso E calcula la probabilidad de que el dato $x_i$ provenga de la gaussiana k, según los parámetros actuales del modelo, (estimados con K-Means).\n",
+    "\n",
+    "$$\n",
+    "\\gamma_{ik}\n",
+    "=\n",
+    "P(z_i = k \\mid x_i, \\theta^{(t)}) \n",
+    "= \n",
+    "\\frac{\n",
+    "\\pi_k^{(t)} \\, \\mathcal{N}(x_i \\mid \\mu_k^{(t)}, \\Sigma_k^{(t)})\n",
+    "}{\n",
+    "\\sum_{j=1}^{K} \n",
+    "\\pi_j^{(t)} \\, \\mathcal{N}(x_i \\mid \\mu_j^{(t)}, \\Sigma_j^{(t)})\n",
+    "}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Luego, en el paso M, se maximiza la Esperanza de la log-verosimilitud completa, es decir, contemplando las variables latentes y utilizando las probabilidades del paso E. Se trabaja con la esperanza dado que permite reducir el problema del logaritmo de la suma, en uno más sencillo de resolver, aprovechando las expresiones con las variables latentes.\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}_{Z \\mid X, \\theta^{(t)}}\n",
+    "\\big[ \\log p(X, Z \\mid \\theta) \\big]\n",
+    "= \n",
+    "\\sum_{i=1}^{N} \n",
+    "\\sum_{k=1}^{K} \n",
+    "\\gamma_{ik}\n",
+    "\\Big(\n",
+    "\\log \\pi_k\n",
+    "+ \n",
+    "\\log \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\Big)\n",
+    "$$\n",
+    "\n",
+    "De allí se obtienen las actualizaciones de los parámetros, a partir de derivar la expresión con respecto a cada uno, y se calculan los pesos según la cantidad de muestras que pertenecen a cada uno de los clusters.\n",
+    "\n",
+    "$$\n",
+    "N_k = \\sum_{i=1}^{N} \\gamma_{ik}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\pi_k^{(t+1)} = \\frac{N_k}{N}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mu_k^{(t+1)} \n",
+    "= \n",
+    "\\frac{1}{N_k}\n",
+    "\\sum_{i=1}^{N} \n",
+    "\\gamma_{ik} \\, x_i\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\Sigma_k^{(t+1)} \n",
+    "= \n",
+    "\\frac{1}{N_k}\n",
+    "\\sum_{i=1}^{N} \n",
+    "\\gamma_{ik} \n",
+    "\\big( \n",
+    "x_i - \\mu_k^{(t+1)} \n",
+    "\\big)\n",
+    "\\big( \n",
+    "x_i - \\mu_k^{(t+1)} \n",
+    "\\big)^{T}\n",
+    "$$\n",
+    "\n",
+    "En definitiva, el algoritmo EM, permite iterar de la siguiente manera:\n",
+    "\n",
+    "paso E: Aproxima las probabilidades de que cada dato pertenezca a cada uno de los clusters. Es decir, qué tan probable es que ese dato provenga de alguna de las gaussianas (Cada una representada por un cluster).\n",
+    "\n",
+    "paso M: Vuelve a estimar los parámetros, maximizando la esperanza de la log-verosimilitud, utilizando esas probabilidades. Luego, verifica cuanto cambió la log-verosimilitud, ya que la misma crecerá, al ser el logaritmo una función monótona creciente. El algoritmo termina cuando la log-verosimilitud comienza a crecer lentamente. "
    ]
   },
   {
