'sin epub - act .gitignore'

--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "id": "1146d691",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "id": "0e881616",
    "metadata": {},
    "outputs": [
@@ -53,8 +53,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Descarga de archivos completa.\n",
-      "La carpeta 'compressed' ya existe, no se vuelve a extraer.\n",
+      "Descargando catalog.csv...\n",
+      "Descargando compressed.tar...\n",
+      "Descarga de archivos completa.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\solek\\AppData\\Local\\Temp\\ipykernel_21156\\48687499.py:24: DeprecationWarning: Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata. Use the filter argument to control this behavior.\n",
+      "  tar.extractall(\"compressed\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivos extraídos en la carpeta 'compressed'\n",
       "\n"
      ]
     }
@@ -99,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "ea9eac24",
    "metadata": {},
    "outputs": [
@@ -160,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "6dc835b0",
    "metadata": {},
    "outputs": [],
@@ -178,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "id": "9b7ebbe2",
    "metadata": {},
    "outputs": [],
@@ -204,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "id": "8e2db753",
    "metadata": {},
    "outputs": [
@@ -224,7 +240,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "id": "483d2e45",
    "metadata": {},
    "outputs": [],
@@ -275,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "id": "76efc719",
    "metadata": {},
    "outputs": [],
@@ -298,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "b544e07e",
    "metadata": {},
    "outputs": [
@@ -319,7 +335,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "ca20128a",
    "metadata": {},
    "outputs": [
