--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -618,7 +618,7 @@
     "\\log L(\\Theta) \n",
     "= \\log P(X \\mid \\Theta) \n",
     "= \\sum_{i=1}^{N} \\log P(x_i \\mid \\Theta)\n",
-    "= \\sum_{i=1}^{N} \\log \\left( \\sum_{k=1}^{K} \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k) \\right)\n",
+    "= \\sum_{i=1}^{N} \\log \\left( \\sum_{k=1}^{K} \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k) \\right)\n",
     "$$\n",
     "\n",
     "Luego, el algoritmo EM, consta de 2 pasos para estimar estos parámetros desconocidos\n",
@@ -637,9 +637,9 @@
    "id": "68e2085f",
    "metadata": {},
    "source": [
-    "#### Correcciones\n",
+    "## Correcciones - 2\n",
     "\n",
-    "Para el caso de 1 gaussiana, la verosimilitud es:\n",
+    "#### Considerando el caso de 1 gaussiana y $N$ datos\n",
     "\n",
     "$$\n",
     "L(\\mu, \\sigma^2) \n",
@@ -648,7 +648,9 @@
     "\\exp\\!\\left(-\\frac{(x_i - \\mu)^2}{2\\sigma^2}\\right)\n",
     "$$\n",
     "\n",
-    "Este caso es complejo de derivar de forma directa, ya que es una productoria de N términos. Al derivar es necesario aplicar la regla del producto, complejizando mucho la cuenta. Por ello se recurre a aplicar el logaritmo a la verosimilitud, que permite descomponer la productoria en una sumatoria. Sin embargo, el problema si tiene soluciones cerradas, aunque al ser probabilidades, ocurre que la productoria se realiza entre valores muy pequeños (entre 0 y 1), que pueden llevar por redondeo a 0 en una computadora.\n",
+    "Donde, se supone que las N muestras provienen de una misma Gaussiana, por lo que al suponerse los datos variables independientes, resulta en una productoria.\n",
+    "\n",
+    "Este caso es complejo de derivar de forma directa, ya que es una productoria de $N$ términos. Al derivar es necesario aplicar la regla del producto, complejizando mucho la cuenta. Por ello se recurre a aplicar el logaritmo a la verosimilitud, que permite descomponer la productoria en una sumatoria. Sin embargo, el problema si tiene soluciones cerradas, aunque al ser probabilidades, ocurre que la productoria se realiza entre valores muy pequeños (entre 0 y 1), que pueden llevar por redondeo a 0 en una computadora.\n",
     "Por otro lado, aplicar el logaritmo permite optimizar facilmente, ya que esta es una función monótona creciente. Crecerá de forma indefinida pero en un determinado valor, comenzará a estancarse, variando poco, algo que se aprovechará en el algoritmo EM.\n",
     "\n",
     "Luego, la log-verosimilitud para este caso es:\n",
@@ -676,20 +678,48 @@
     "\\hat{\\sigma}^2 = \\frac{1}{N}\\sum_{i=1}^{N}(x_i - \\hat{\\mu})^2\n",
     "$$\n",
     "\n",
+    "#### Considerando el caso de $K$ gaussianas y $N$ datos\n",
     "\n",
-    "Para el caso de $k$ gaussianas, la verosimilitud vale:\n",
+    "Para este caso, la expresión de la verosimilitud (es decir, la probabilidad de los datos $x_i$ dados los parámetros $\\theta$ considerando estos mismos parámetros como variables), es:\n",
+    "\n",
+    "$$\n",
+    "L(\\theta) = p(x_1, \\ldots, x_N \\mid \\theta)\n",
+    "$$\n",
+    "\n",
+    "Luego, suponiendo que los datos $x_i$ son independientes (y además idénticamente distribuídos), la misma puede escribirse como un producto:\n",
+    "\n",
+    "$$\n",
+    "p(x_1, x_2, \\ldots, x_N \\mid \\theta)\n",
+    "= p(x_1 \\mid \\theta)\\, p(x_2 \\mid \\theta)\\, \\cdots\\, p(x_N \\mid \\theta)\n",
+    "$$\n",
+    "\n",
+    "Que puede resumirse en una productoria:\n",
+    "\n",
+    "$$\n",
+    "L(\\theta)\n",
+    "= \\prod_{i=1}^N p(x_i \\mid \\theta)\n",
+    "$$\n",
+    "\n",
+    "Por otro lado, considerando $K$ Gaussianas, se asume que los $N$ datos provienen de estas gaussianas, solo que no se conoce de cuál proviene cada una. Esto lleva a que debamos sumar todas las probabilidades condicionales (es decir, la probabilidad de que el dato $x_i$ provenga de la gaussiana $k$ con parámetros $\\mu_k$, $\\sigma_k$, considerando un peso para cada una de las gaussianas pertenecientes a la mezcla) que se observan debajo:\n",
+    "\n",
+    "$$\n",
+    "p(x_i \\mid \\theta)\n",
+    "= \\sum_{k=1}^K \\pi_k\\,\\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "$$\n",
+    "\n",
+    "Luego, reescribiendo la expresión de la verosimilitud, resulta:\n",
     "\n",
     "$$\n",
     "L(\\theta)\n",
     "= \\prod_{i=1}^{N}\n",
     "\\left[\n",
     "\\sum_{k=1}^{K}\n",
-    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
     "\\right]\n",
     "$$\n",
     "\n",
     "\n",
-    "Lo cual sigue siendo complejo de derivar de forma directa, llevando entonces a aplicar el logaritmo para descomponer la productoria en una suma y por las razones previas:\n",
+    "Lo cual sigue siendo complejo de derivar de forma directa, llevando entonces a aplicar el logaritmo para descomponer la productoria en una suma y por las razones mencionadas previamente:\n",
     "\n",
     "$$\n",
     "\\ell(\\theta)\n",
@@ -698,63 +728,94 @@
     "\\log\n",
     "\\left[\n",
     "\\sum_{k=1}^{K}\n",
-    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
     "\\right]\n",
     "$$\n",
     "\n",
     "Sin embargo, en este caso la derivación también se vuelve compleja, dado que se tiene el logaritmo de una sumatoria, que termina acoplando los parámetros, producto de una solución no lineal, es decir, no hay solución analítica. Es aquí cuando el algoritmo EM y sus iteraciones toma protagonismo: \n",
     "\n",
-    "El algoritmo EM se basa en introducir $k$ variables latentes, que indican a qué gaussiana (de las $k$ gaussianas) pertenece cada muestra:\n",
+    "#### Algoritmo EM\n",
+    "\n",
+    "El algoritmo EM se basa en introducir $K$ variables ocultas, que indican a qué gaussiana (de las $K$ gaussianas) pertenece cada muestra.\n",
     "\n",
     "$$\n",
-    "z_i \\in \\{1, 2, \\dots, K\\}, \\qquad P(z_i = k) = \\pi_k\n",
+    "z_i \\in \\{1, 2, \\dots, K\\}\\qquad P(z_i = k) = \\pi_k\n",
     "$$\n",
     "\n",
-    "con estas variables, la verosimilitud marginal resultante, es:\n",
+    "Luego, considerando esta nueva variable oculta, la probabilidad conjunta entre el dato y la misma, es:\n",
+    "\n",
     "$$\n",
-    "p(x_i \\mid \\theta)\n",
-    "= \\sum_{z_i=1}^{K} p(x_i, z_i \\mid \\theta)\n",
+    "p(x_i, z_i) = p(z_i)\\,p(x_i \\mid z_i).\n",
     "$$\n",
     "\n",
-    "donde las probabilidades están dadas por:\n",
+    "\n",
+    "tomando entonces, un valor en específico para $z$, es decir, tomando el valor de un cluster en particular, la probabilidad de que el dato, proveniente del cluster $k$ utilizando los parámetros actuales del modelo, vale:\n",
+    "\n",
+    "$$\n",
+    "p(x_i, z_i = k \\mid \\theta) = \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k).\n",
+    "$$\n",
+    "\n",
+    "Extendiendo esta probabilidad para todos los clusters: (En la siguiente ecuación, cada término es 0, salvo el cluster tal que $z_i$ = $k$)\n",
+    "\n",
     "\n",
     "$$\n",
     "p(x_i, z_i \\mid \\theta)\n",
-    "= \\pi_{z_i} \\, \\mathcal{N}(x_i \\mid \\mu_{z_i}, \\Sigma_{z_i})\n",
+    "= \n",
+    "\\sum_{k=1}^{K}\n",
+    "\\mathbf{1}_{\\{z_i = k\\}}\\,\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k).\n",
+    "\n",
     "$$\n",
     "\n",
     "\n",
-    "Al aplicar el logaritmo considerando estas variables latentes, la expresión de la log-verosimilitud completa se reduce a una sumatoria doble:\n",
+    "De esta manera, la verosimilitud, es decir, la probabilidad conjunta de $x$ y $z$ dejando $\\theta$ como variable, suponiendo que cada par ($x_i$, $z_i$) son independientes del resto, puede escribirse como:\n",
     "\n",
     "$$\n",
-    "\\log p(X, Z \\mid \\theta)\n",
+    "p(x,z \\mid \\theta)\n",
+    "= \\prod_{i=1}^{N} p(x_i, z_i \\mid \\theta)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Al aplicar el logaritmo considerando estas variables ocultas, la expresión de la log-verosimilitud completa se reduce a una sumatoria doble:\n",
+    "\n",
+    "$$\n",
+    "\\log p(x, z \\mid \\theta)\n",
     "= \\sum_{i=1}^{N} \\sum_{k=1}^{K} \\mathbf{1}_{\\{z_i = k\\}}\n",
     "\\left[\n",
-    "\\log \\pi_k + \\log \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\log \\pi_k + \\log \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
     "\\right]\n",
     "$$\n",
     "\n",
-    "Considerando esto, el algoritmo en el paso E calcula la probabilidad de que el dato $x_i$ provenga de la gaussiana k, según los parámetros actuales del modelo, (estimados con K-Means).\n",
+    "#####  Paso E\n",
+    "\n",
+    "Luego, en el paso E, el algoritmo calcula la probabilidad de que el dato $x_i$ provenga de la gaussiana k, según los parámetros actuales del modelo, (estimados con K-Means). Esto se recalculará en cada iteración.\n",
     "\n",
     "$$\n",
     "\\gamma_{ik}\n",
     "=\n",
-    "P(z_i = k \\mid x_i, \\theta^{(t)}) \n",
+    "P(z_i = k \\mid x_i, \\theta) \n",
     "= \n",
     "\\frac{\n",
-    "\\pi_k^{(t)} \\, \\mathcal{N}(x_i \\mid \\mu_k^{(t)}, \\Sigma_k^{(t)})\n",
+    "P(x_i \\mid z_i = k, \\theta)\\; P(z_i = k \\mid \\theta)\n",
+    "}{\n",
+    "P(x_i \\mid \\theta)\n",
+    "}\n",
+    "=\n",
+    "\\frac{\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
     "}{\n",
     "\\sum_{j=1}^{K} \n",
-    "\\pi_j^{(t)} \\, \\mathcal{N}(x_i \\mid \\mu_j^{(t)}, \\Sigma_j^{(t)})\n",
+    "\\pi_j \\, \\mathcal{N}(x_i \\mid \\mu_j, \\sigma_j)\n",
     "}\n",
     "$$\n",
     "\n",
+    "#####  Paso M\n",
     "\n",
-    "Luego, en el paso M, se maximiza la Esperanza de la log-verosimilitud completa, es decir, contemplando las variables latentes y utilizando las probabilidades del paso E. Se trabaja con la esperanza dado que permite reducir el problema del logaritmo de la suma, en uno más sencillo de resolver, aprovechando las expresiones con las variables latentes.\n",
+    "Luego, en el paso M, se maximiza la Esperanza de la log-verosimilitud completa, es decir, contemplando las variables ocultas y utilizando las probabilidades del paso E. Esta, es la esperanza de que cada posible cluster $z$, sea el correcto para $x_i$, según los parámetros $\\theta$. Se trabaja con la esperanza dado que permite reducir el problema del logaritmo de la suma, en uno más sencillo de resolver, aprovechando las expresiones con las variables ocultas.\n",
     "\n",
     "$$\n",
-    "\\mathbb{E}_{Z \\mid X, \\theta^{(t)}}\n",
-    "\\big[ \\log p(X, Z \\mid \\theta) \\big]\n",
+    "\\mathbb{E}_{z \\mid x, \\theta}\n",
+    "\\big[ \\log p(x, z \\mid \\theta) \\big]\n",
     "= \n",
     "\\sum_{i=1}^{N} \n",
     "\\sum_{k=1}^{K} \n",
@@ -762,7 +823,7 @@
     "\\Big(\n",
     "\\log \\pi_k\n",
     "+ \n",
-    "\\log \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
+    "\\log \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
     "\\Big)\n",
     "$$\n",
     "\n",
@@ -785,7 +846,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\Sigma_k^{(t+1)} \n",
+    "\\sigma_k^{(t+1)} \n",
     "= \n",
     "\\frac{1}{N_k}\n",
     "\\sum_{i=1}^{N} \n",
@@ -800,9 +861,9 @@
     "\n",
     "En definitiva, el algoritmo EM, permite iterar de la siguiente manera:\n",
     "\n",
-    "paso E: Aproxima las probabilidades de que cada dato pertenezca a cada uno de los clusters. Es decir, qué tan probable es que ese dato provenga de alguna de las gaussianas (Cada una representada por un cluster).\n",
+    "paso E: Aproxima las probabilidades de que cada dato pertenezca a cada uno de los clusters, dados los parámetros actuales del modelo (es decir, en cada iteración). Es decir, qué tan probable es que ese dato provenga de una gaussiana en particular y esto se calcula para todos los datos.\n",
     "\n",
-    "paso M: Vuelve a estimar los parámetros, maximizando la esperanza de la log-verosimilitud, utilizando esas probabilidades. Luego, verifica cuanto cambió la log-verosimilitud, ya que la misma crecerá, al ser el logaritmo una función monótona creciente. El algoritmo termina cuando la log-verosimilitud comienza a crecer lentamente. "
+    "paso M: Vuelve a estimar los parámetros, maximizando la esperanza de la log-verosimilitud, utilizando la probabilidad calculada previamente $\\gamma_{ik}$ como el peso correspondiente a cada gaussiana de le mezcla, que indica que tan probable es que sea el correcto. Luego, verifica cuanto cambió la log-verosimilitud, ya que la misma crecerá, al ser el logaritmo una función monótona creciente. El algoritmo termina cuando la log-verosimilitud comienza a crecer lentamente o se alcanza la cantidad máxima de iteraciones. "
    ]
   },
   {
