--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 911,
+   "execution_count": 928,
    "id": "1146d691",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 929,
    "id": "0e881616",
    "metadata": {},
    "outputs": [
@@ -72,6 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Descargando compressed.tar...\n",
       "Descarga de archivos completa.\n",
       "La carpeta 'compressed' ya existe, no se vuelve a extraer.\n",
       "\n"
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 913,
+   "execution_count": 930,
    "id": "ea9eac24",
    "metadata": {},
    "outputs": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 914,
+   "execution_count": 931,
    "id": "6dc835b0",
    "metadata": {},
    "outputs": [],
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 915,
+   "execution_count": 932,
    "id": "9b7ebbe2",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 916,
+   "execution_count": 933,
    "id": "8e2db753",
    "metadata": {},
    "outputs": [
@@ -281,7 +282,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 916,
+     "execution_count": 933,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 917,
+   "execution_count": 934,
    "id": "483d2e45",
    "metadata": {},
    "outputs": [],
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 918,
+   "execution_count": 935,
    "id": "76efc719",
    "metadata": {},
    "outputs": [],
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 919,
+   "execution_count": 936,
    "id": "b544e07e",
    "metadata": {},
    "outputs": [
@@ -389,7 +390,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 919,
+     "execution_count": 936,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 920,
+   "execution_count": 937,
    "id": "ca20128a",
    "metadata": {},
    "outputs": [
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 921,
+   "execution_count": 938,
    "id": "00bc6e95",
    "metadata": {},
    "outputs": [],
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 922,
+   "execution_count": 939,
    "id": "99c820d9",
    "metadata": {},
    "outputs": [
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 923,
+   "execution_count": 940,
    "id": "eb7ee14d",
    "metadata": {},
    "outputs": [
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 924,
+   "execution_count": 941,
    "id": "026a7f2c",
    "metadata": {},
    "outputs": [
@@ -940,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 925,
+   "execution_count": 942,
    "id": "1a5565e8",
    "metadata": {},
    "outputs": [],
@@ -1039,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 926,
+   "execution_count": 943,
    "id": "9c87c211",
    "metadata": {},
    "outputs": [
@@ -1090,22 +1091,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 944,
    "id": "2617de7e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\solek\\AppData\\Local\\Temp\\ipykernel_17940\\1118746973.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  errors[\"score\"] = errors[\"Valoración\"] * errors[\"Nº Votos\"]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1470,7 +1459,7 @@
        "252          False   254.8  "
       ]
      },
-     "execution_count": 927,
+     "execution_count": 944,
      "metadata": {},
      "output_type": "execute_result"
     }
