--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1045,
+   "execution_count": null,
    "id": "9c87c211",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
     "f1_train = f1_score(y_train_clean, y_pred_train, average='macro')\n",
     "f1_test  = f1_score(y_test_clean, y_pred_test, average='macro')\n",
     "\n",
-    "print(\"Métricas del MNB\")\n",
+    "print('Métricas del MNB')\n",
     "print(f'Accuracy (train): {round(acc_train *100,3)}%' )\n",
     "print(f'Accuracy (test): {round(acc_test *100,3)}%')\n",
     "print(f'Macro F1 (train): {round(f1_train*100,3)}%')\n",
@@ -1141,7 +1141,7 @@
     "f1_train = f1_score(y_train_clean, y_pred_train, average='macro')\n",
     "f1_test  = f1_score(y_test_clean, y_pred_test, average='macro')\n",
     "\n",
-    "print(\"Métricas Dummy Classifier\")\n",
+    "print('\\n\\nMétricas Dummy Classifier')\n",
     "print(f'Accuracy (train): {round(acc_train *100,3)}%' )\n",
     "print(f'Accuracy (test): {round(acc_test *100,3)}%')\n",
     "print(f'Macro F1 (train): {round(f1_train*100,3)}%')\n",
@@ -1150,10 +1150,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c21554aa",
+   "id": "3aab3bfe",
    "metadata": {},
    "source": [
-    "#### Se desea efectuar un análisis cualitativo de los errores de clasificación. Para ello, seleccione las 10 obras más populares (de testeo) que hayan sido clasificadas incorrectamente. Interpretar los resultados."
+    "Se evidencia que el modelo realiza una mejor predicción que el clasificador dummy, el cual escoje el género más frecuente.\n",
+    "\n",
+    "Por otro lado, se puede notar que, si se analizan los datos de testeo, el clasificador MNB tiene las clases ligeramente desbalanceadas, ya que el accuracy y el macro-f1 no coinciden. El accuracy, mide los aciertos con respecto al total de predicciones, mientras que el macro-f1, combina cuantas predicciones de una clase eran correctas y de todos los casos reales (es decir, de todos los libros de una clase) cuales se predijeron correctamente. \n",
+    "\n",
+    "Por esta razón, es evidente que hay géneros que se predicen peor que otros, dado que se ve afectado por las clases con menos aciertos. "
    ]
   },
   {
