--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 239,
    "id": "1146d691",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,6 @@
     "#librerias\n",
     "\n",
     "#Generales\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -35,7 +34,7 @@
     "from bs4 import BeautifulSoup\n",
     "from collections import Counter\n",
     "\n",
-    "\n",
+    "#Stopwords\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "\n",
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 240,
    "id": "0e881616",
    "metadata": {},
    "outputs": [
@@ -99,8 +98,7 @@
     "\n",
     "print(\"Descarga de archivos completa.\")\n",
     "\n",
-    "# Descompresion del catalogo\n",
-    "# Se descomprimen los archivos\n",
+    "# Se descomprimen los libros en el archivo .tar si no están descomprimidos\n",
     "if not os.path.exists(\"compressed\"):\n",
     "    with tarfile.open(file_tar, \"r\") as tar:\n",
     "        tar.extractall(\"compressed\")\n",
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 241,
    "id": "ea9eac24",
    "metadata": {},
    "outputs": [
@@ -141,7 +139,7 @@
     "\n",
     "# Se muestran las columnas del catalogo\n",
     "print(\"Columnas del catálogo:\")\n",
-    "print(df_catalog.columns)\n"
+    "print(df_catalog.columns)"
    ]
   },
   {
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 242,
    "id": "6dc835b0",
    "metadata": {},
    "outputs": [],
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 243,
    "id": "9b7ebbe2",
    "metadata": {},
    "outputs": [
@@ -232,7 +230,7 @@
     "\n",
     "print(f\"Total de archivos EPUB disponibles: {len(epubs)}\")\n",
     "\n",
-    "# Se crea un conjunto de ids válidos, es decir, se acumulan los ids de los epubs que existen en la ruta path_books\n",
+    "# Se crea un conjunto de ids válidos, es decir, se cargan los ids de los epubs que existen en la ruta path_books\n",
     "valids_id = set()\n",
     "for f in epubs:\n",
     "    try:\n",
@@ -240,7 +238,7 @@
     "    except ValueError:\n",
     "        pass\n",
     "\n",
-    "# Se reduce el catálogo a aquellos libros que tienen su versión digital (es decir, que existe en la carpeta descomprimida)\n",
+    "# Se reduce el catálogo a aquellos libros que tienen su versión digital (es decir, que existen en la carpeta descomprimida)\n",
     "df_catalog = df_catalog[df_catalog['EPL Id'].isin(valids_id)].copy()\n"
    ]
   },
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 244,
    "id": "8e2db753",
    "metadata": {},
    "outputs": [
@@ -282,20 +280,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Se separan los géneros y se cuentan individualmente\n",
-    "# Se busca eliminar los espacios despues de las comas y los posteriores al último caracter de la palabra\n",
+    "# Se separan los géneros y se eliminan los espacios despues de las comas y los posteriores al último caracter de la palabra\n",
     "all_genres = df_catalog['Géneros'].dropna()\\\n",
     "    .str.split(r',\\s*')\\\n",
     "    .apply(lambda lst: [g.strip() for g in lst])\n",
     "\n",
     "# Se cuentan los géneros, utilizando una doble compresión.\n",
-    "# se toma cada sublista (es decir, cada lista de géneros para cada libro) en all_genres y a cada una de ellas, se les toma cada uno de los géneros\n",
+    "# se toma cada sublista (es decir, cada lista de géneros para cada uno de los libros) en all_genres y a cada una de ellas, se les toma cada uno de los géneros\n",
     "# y se aplanan en una lista, donde Counter cuenta la cantidad de ocurrencias de cada uno de los géneros en la lista total \n",
     "genre_counter = Counter([g for sublist in all_genres for g in sublist])\n",
     "\n",
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 245,
    "id": "483d2e45",
    "metadata": {},
    "outputs": [],
@@ -324,9 +321,12 @@
     "df_catalog = df_catalog[~df_catalog['Géneros'].str.fullmatch(r'Otros', na=False)]\n",
     "\n",
     "# Se elimina el género \"Otros\" de los demás libros, considerando nuevamente los casos con espacios post comas y post ultimo caracter\n",
+    "# además del caso en que \"Otros\" es el primer género de la lista\n",
+    "w = r'^\\s*Otros\\s*,?|,?\\s*Otros\\s*' #Patrón para todos los casos\n",
+    "\n",
     "df_catalog['Géneros'] = (\n",
     "    df_catalog['Géneros']\n",
-    "    .str.replace(r',?\\s*Otros', '', regex=True)\n",
+    "    .str.replace(w, '', regex=True)\n",
     "    .str.strip(', ')\n",
     ")"
    ]
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 246,
    "id": "76efc719",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 247,
    "id": "b544e07e",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 248,
    "id": "ca20128a",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 249,
    "id": "00bc6e95",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 250,
    "id": "99c820d9",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 251,
    "id": "eb7ee14d",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 252,
    "id": "026a7f2c",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 253,
    "id": "1a5565e8",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 254,
    "id": "9c87c211",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 255,
    "id": "2617de7e",
    "metadata": {},
    "outputs": [
@@ -1358,7 +1358,7 @@
        "46891        Realista         8.9       258  2296.2  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
